--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	  <link rel="stylesheet" href="dist/css/bootstrap-submenu.min.css">
+	  <link rel="stylesheet" href="stylesheet.css">
+
+
+	  <script src="https://code.jquery.com/jquery-2.1.4.min.js" defer></script>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/~3.3.4/js/bootstrap.min.js" defer></script>
+	  <script src="dist/js/bootstrap-submenu.min.js" defer></script>
+
+  </head>
+  <body>
+    <!-- tabs -->
+        <nav class="navbar navbar-inverse navbar-static-top marginBottom-0" role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+              <a class="navbar-brand" href="#" target="_blank">NewWindow</a>
+            </div>
+            
+            <div class="collapse navbar-collapse" id="navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Open</a>
+								<ul class="dropdown-menu">
+									<li><a href="#">From File</a></li>
+									<li class="divider"></li>
+									<li><a href="#">Recent 1</a></li>
+									<li><a href="#">Recent 2</a></li>
+									<li><a href="#">Etc.</a></li>
+								</ul>
+							</li>
+							<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Open Recent</a>
+								<ul class="dropdown-menu">
+									<li><a href="#">From File</a></li>
+									<li class="divider"></li>
+									<li><a href="#">Recent 1</a></li>
+									<li><a href="#">Recent 2</a></li>
+									<li><a href="#">Etc.</a></li>
+								</ul>
+							</li>
+							<li class="divider"></li>
+							<li><a href="#">Show Dataset Metrics</a></li>
+							<li class="divider"></li>
+							<li><a href="#">Export Image...</a></li>
+							<li><a href="#">Exit</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Annotations <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Load Basic Annotations...</a></li>
+                            <li><a href="#">Load ENCODE Tracks...</a></li>
+                            <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Hand Annotations </a>
+								<ul class="dropdown-menu">
+		                            <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Import </a>
+										<ul class="dropdown-menu">	
+											<li><a href="#">From File... </a></li>	
+										</ul>	
+									</li>						
+									<li><a href="#">Import </a></li>
+									<li><a href="#">Dropdown Submenu Link 4.2</a></li>
+									<li><a href="#">Dropdown Submenu Link 4.3</a></li>
+									<li><a href="#">Dropdown Submenu Link 4.4</a></li>
+								</ul>
+							</li>
+                            <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Link 5</a>
+								<ul class="dropdown-menu">
+									<li><a href="#">Dropdown Submenu Link 5.1</a></li>
+									<li><a href="#">Dropdown Submenu Link 5.2</a></li>
+									<li><a href="#">Dropdown Submenu Link 5.3</a></li>
+									<li class="divider"></li>
+									<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Submenu Link 5.4</a>
+										<ul class="dropdown-menu">
+											<li><a href="#">Dropdown Submenu Link 5.4.1</a></li>
+											<li><a href="#">Dropdown Submenu Link 5.4.2</a></li>
+											<li class="divider"></li>
+											<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Submenu Link 5.4.3</a>
+												<ul class="dropdown-menu">
+													<li><a href="#">Dropdown Submenu Link 5.4.3.1</a></li>
+													<li><a href="#">Dropdown Submenu Link 5.4.3.2</a></li>
+													<li><a href="#">Dropdown Submenu Link 5.4.3.3</a></li>
+													<li><a href="#">Dropdown Submenu Link 5.4.3.4</a></li>
+												</ul>
+											</li>
+											<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Submenu Link 5.4.4</a>
+												<ul class="dropdown-menu">
+													<li><a href="#">Dropdown Submenu Link 5.4.4.1</a></li>
+													<li><a href="#">Dropdown Submenu Link 5.4.4.2</a></li>
+													<li><a href="#">Dropdown Submenu Link 5.4.4.3</a></li>
+													<li><a href="#">Dropdown Submenu Link 5.4.4.4</a></li>
+												</ul>
+											</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </nav>
+                
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="myscript.js"></script>
+  </body>
+</html>
