this is a demo for a proposed menu layout for juicebox (aiden lab)

--- a/index.html
+++ b/index.html
@@ -19,19 +19,10 @@
   <body>
     <!-- tabs -->
         <nav class="navbar navbar-inverse navbar-static-top marginBottom-0" role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-              <a class="navbar-brand" href="#" target="_blank">NewWindow</a>
-            </div>
             
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">File <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Open</a>
 								<ul class="dropdown-menu">
@@ -63,49 +54,48 @@
                             <li><a href="#">Load Basic Annotations...</a></li>
                             <li><a href="#">Load ENCODE Tracks...</a></li>
                             <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Hand Annotations </a>
-								<ul class="dropdown-menu">
-		                            <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Import </a>
-										<ul class="dropdown-menu">	
-											<li><a href="#">From File... </a></li>	
-										</ul>	
-									</li>						
-									<li><a href="#">Import </a></li>
-									<li><a href="#">Dropdown Submenu Link 4.2</a></li>
-									<li><a href="#">Dropdown Submenu Link 4.3</a></li>
-									<li><a href="#">Dropdown Submenu Link 4.4</a></li>
+								<ul class="dropdown-menu">					
+									<li><a href="#">Import... </a></li>
+									<li><a href="#">Export...</a></li>
+									<li><a href="#">Undo</a></li>
+									<li><a href="#">Clear All</a></li>
 								</ul>
 							</li>
-                            <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Link 5</a>
-								<ul class="dropdown-menu">
-									<li><a href="#">Dropdown Submenu Link 5.1</a></li>
-									<li><a href="#">Dropdown Submenu Link 5.2</a></li>
-									<li><a href="#">Dropdown Submenu Link 5.3</a></li>
+							<li><a href="#">Show 2D Annotations</a></li>
+							<li><a href="#">Show Hand Annotations</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">View <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Export Image...</a></li>
+                            <li><a href="#">Slide Show</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookmarks <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Save...</a></li>
+                            <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Restore </a>
+								<ul class="dropdown-menu">					
+									<li><a href="#">Location State #1 </a></li>
+									<li><a href="#">Location State #2 </a></li>
+									<li><a href="#">Etc. </a></li>
 									<li class="divider"></li>
-									<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Submenu Link 5.4</a>
-										<ul class="dropdown-menu">
-											<li><a href="#">Dropdown Submenu Link 5.4.1</a></li>
-											<li><a href="#">Dropdown Submenu Link 5.4.2</a></li>
-											<li class="divider"></li>
-											<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Submenu Link 5.4.3</a>
-												<ul class="dropdown-menu">
-													<li><a href="#">Dropdown Submenu Link 5.4.3.1</a></li>
-													<li><a href="#">Dropdown Submenu Link 5.4.3.2</a></li>
-													<li><a href="#">Dropdown Submenu Link 5.4.3.3</a></li>
-													<li><a href="#">Dropdown Submenu Link 5.4.3.4</a></li>
-												</ul>
-											</li>
-											<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown Submenu Link 5.4.4</a>
-												<ul class="dropdown-menu">
-													<li><a href="#">Dropdown Submenu Link 5.4.4.1</a></li>
-													<li><a href="#">Dropdown Submenu Link 5.4.4.2</a></li>
-													<li><a href="#">Dropdown Submenu Link 5.4.4.3</a></li>
-													<li><a href="#">Dropdown Submenu Link 5.4.4.4</a></li>
-												</ul>
-											</li>
-										</ul>
-									</li>
+									<li><a href="#">Edit List...</a></li>
 								</ul>
 							</li>
+                            <li><a href="#">Import... </a></li>
+                            <li><a href="#">Export... </a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">APA? (TBD)</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">About</a></li>
+                            <li><a href="http://www.aidenlab.org/juicebox/">Tutorial</a></li>
                         </ul>
                     </li>
                 </ul>
