--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 									<li><a href="#">Etc.</a></li>
 								</ul>
 							</li>
-							<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Open Recent</a>
+							<li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Open Control</a>
 								<ul class="dropdown-menu">
 									<li><a href="#">From File</a></li>
 									<li class="divider"></li>
@@ -73,7 +73,7 @@
                     </li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookmarks <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Save...</a></li>
+                            <li><a href="#">Save Current Location</a></li>
                             <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Restore </a>
 								<ul class="dropdown-menu">					
 									<li><a href="#">Location State #1 </a></li>
