--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookmarks <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Save Current Location</a></li>
+                            <li><a href="#">Save State </a></li>
                             <li class="dropdown dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Restore </a>
 								<ul class="dropdown-menu">					
 									<li><a href="#">Location State #1 </a></li>
@@ -89,6 +89,7 @@
                     </li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="#">Command Line Tool Interface</a></li>
                             <li><a href="#">APA? (TBD)</a></li>
                         </ul>
                     </li>
