--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Command Line Tool Interface</a></li>
+                            <li><a href="#">Render 3D Visualization</a></li>
                             <li><a href="#">APA? (TBD)</a></li>
                         </ul>
                     </li>
