--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 								</ul>
 							</li>
 							<li class="divider"></li>
-							<li><a href="#">Show Dataset Metrics</a></li>
 							<li><a href="#">Exit</a></li>
                         </ul>
                     </li>
@@ -65,8 +64,10 @@
                     </li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">View <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Export Image...</a></li>
+                            <li><a href="#">Show Dataset Metrics</a></li>
+                            <li><a href="#">3D Visualization</a></li>
                             <li><a href="#">Slide Show</a></li>
+                            <li><a href="#">Export Image...</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookmarks <b class="caret"></b></a>
@@ -83,13 +84,6 @@
 							</li>
                             <li><a href="#">Import... </a></li>
                             <li><a href="#">Export... </a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Command Line Tool Interface</a></li>
-                            <li><a href="#">Render 3D Visualization</a></li>
-                            <li><a href="#">APA? (TBD)</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
