--- a/Chaus/KOC.html
+++ b/Chaus/KOC.html
@@ -18,9 +18,11 @@
   </head>
   <body>
     <!-- tabs -->
-
-
-    <iframe src="https://docs.google.com/forms/d/1I_-G5-rTIYDECsoo4ineIf_Cu-h9e3moZx-z21v0tVU/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    <ul class="nav nav-pills nav-stacked">
+      <li role="presentation" class="active"><a href="https://docs.google.com/forms/d/1I_-G5-rTIYDECsoo4ineIf_Cu-h9e3moZx-z21v0tVU/viewform?embedded=true">Home</a></li>
+      <li role="presentation"><a href="#">Profile</a></li>
+      <li role="presentation"><a href="#">Messages</a></li>
+    </ul>
                 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
