constrain nav bar

--- a/Chaus/KOC.html
+++ b/Chaus/KOC.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- tabs -->
-    <ul class="nav nav-pills nav-stacked">
+    <ul class="nav nav-pills nav-stacked nav-justified">
       <li role="presentation" class="active"><a href="https://docs.google.com/forms/d/1I_-G5-rTIYDECsoo4ineIf_Cu-h9e3moZx-z21v0tVU/viewform?embedded=true">Home</a></li>
       <li role="presentation"><a href="#">Profile</a></li>
       <li role="presentation"><a href="#">Messages</a></li>
