--- a/BOTTLE$/copenhagen.html
+++ b/BOTTLE$/copenhagen.html
@@ -11,8 +11,8 @@
 	<meta charset="utf-8" />
 	<title>Marty: Hello. I'm @smarty</title>
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="/theme/css/screen.css" />
-	<link rel="stylesheet" href="/theme/css/responsive.css" />
+	<link rel="stylesheet" href="/css/screen.css" />
+	<link rel="stylesheet" href="/css/responsive.css" />
 	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
@@ -494,7 +494,7 @@
 		</nav>
 	</section>
 
-	<script src="/theme/js/script.js"></script>
+	<script src="/js/script.js"></script>
 	<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-37384038-1']);
