better path not starting with /

--- a/BOTTLE$/copenhagen.html
+++ b/BOTTLE$/copenhagen.html
@@ -11,8 +11,8 @@
 	<meta charset="utf-8" />
 	<title>Marty: Hello. I'm @smarty</title>
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="/css/screen.css" />
-	<link rel="stylesheet" href="/css/responsive.css" />
+	<link rel="stylesheet" href="css/screen.css" />
+	<link rel="stylesheet" href="css/responsive.css" />
 	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
@@ -20,7 +20,7 @@
 	<section id="slides">
 		
 					<div class="slide" data-view="intro" data-order="1">
-						<h2>Hello. I’m @smarty</h2>
+						<h2>Hello. I’m marie</h2>
 						<p><img src="/theme/img/logo-intro.png" alt="Hello. I’m @smarty" /> Angel investor, entrepreneur, trouble-maker and aspiring mayor of The White House. <a href="#" class="slide-trigger open"><i></i> <b>MORE</b></a> <a href="#" class="slide-trigger close"><i></i> <b>LESS</b></a></p>
 					</div>
 				
@@ -494,7 +494,7 @@
 		</nav>
 	</section>
 
-	<script src="/js/script.js"></script>
+	<script src="js/script.js"></script>
 	<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-37384038-1']);
