maybe fixed now

--- a/BOTTLE$/copenhagen.html
+++ b/BOTTLE$/copenhagen.html
@@ -19,7 +19,7 @@
 	<!-- slides -->
 	<section id="slides">
 		
-					<div class="slide" data-view="/BOTTLE$/copenhagen/intro" data-order="1">
+					<div class="slide" data-view="BOTTLE$/copenhagen/intro" data-order="1">
 						<h2>Hello. I’m marie</h2>
 						<p><img src="/theme/img/logo-intro.png" alt="Hello. I’m @smarty" /> Angel investor, entrepreneur, trouble-maker and aspiring mayor of The White House. <a href="#" class="slide-trigger open"><i></i> <b>MORE</b></a> <a href="#" class="slide-trigger close"><i></i> <b>LESS</b></a></p>
 					</div>
@@ -118,7 +118,7 @@
 	<!-- panes -->
 	<section id="panes" class="hide">
 		
-					<div class="pane" data-view="/BOTTLE$/copenhagen/intro">
+					<div class="pane" data-view="BOTTLE$/copenhagen/intro">
 						<div class="inner">
 							<img src="/theme/img/img-intro.png" alt="Hello. I’m @smarty" />
 							<div class="left">
@@ -482,7 +482,7 @@
 			<a href="#" id="about-trigger">Info</a>
 		</nav>
 		<nav id="dates">
-			<a href="#" class="date open" data-view="/BOTTLE$/copenhagen/intro">Jun <i>30</i> 2016</a><a href="#" class="date open" data-view="whitehouse">Jun <i>17</i> 2013</a><a href="#" class="date open" data-view="twitter">May <i>31</i> 2012</a><a href="#" class="date open" data-view="columbia">Jan <i>07</i> 2012</a><a href="#" class="date open" data-view="nclud">Jun <i>04</i> 2012</a><a href="#" class="date open" data-view="yale">Jul <i>20</i> 2012</a><a href="#" class="date open" data-view="apple">May <i>15</i> 2012</a><a href="#" class="date open" data-view="canvas">Jan <i>04</i> 2012</a><a href="#" class="date open" data-view="oracle">Oct <i>20</i> 2011</a><a href="#" class="date open" data-view="teaching">Sep <i>01</i> 2011</a><a href="#" class="date open" data-view="print">Mar <i>15</i> 2011</a><a href="#" class="date open" data-view="mashable">Oct <i>20</i> 2010</a><a href="#" class="date open" data-view="puma">Jun <i>12</i> 2009</a><a href="#" class="date open" data-view="ogilvy">Apr <i>15</i> 2008</a><a href="#" class="date open" data-view="ncluded">Jan <i>18</i> 2007</a><a href="#" class="date open" data-view="fool">Jan <i>04</i> 2006</a><a href="#" class="date open" data-view="cygnus">Mar <i>15</i> 2004</a><a href="#" class="date open" data-view="discovery">Jun <i>01</i> 2002</a><a href="#" class="date open" data-view="umd">Sep <i>15</i> 1999</a>		</nav>
+			<a href="#" class="date open" data-view="BOTTLE$/copenhagen/intro">Jun <i>30</i> 2016</a><a href="#" class="date open" data-view="whitehouse">Jun <i>17</i> 2013</a><a href="#" class="date open" data-view="twitter">May <i>31</i> 2012</a><a href="#" class="date open" data-view="columbia">Jan <i>07</i> 2012</a><a href="#" class="date open" data-view="nclud">Jun <i>04</i> 2012</a><a href="#" class="date open" data-view="yale">Jul <i>20</i> 2012</a><a href="#" class="date open" data-view="apple">May <i>15</i> 2012</a><a href="#" class="date open" data-view="canvas">Jan <i>04</i> 2012</a><a href="#" class="date open" data-view="oracle">Oct <i>20</i> 2011</a><a href="#" class="date open" data-view="teaching">Sep <i>01</i> 2011</a><a href="#" class="date open" data-view="print">Mar <i>15</i> 2011</a><a href="#" class="date open" data-view="mashable">Oct <i>20</i> 2010</a><a href="#" class="date open" data-view="puma">Jun <i>12</i> 2009</a><a href="#" class="date open" data-view="ogilvy">Apr <i>15</i> 2008</a><a href="#" class="date open" data-view="ncluded">Jan <i>18</i> 2007</a><a href="#" class="date open" data-view="fool">Jan <i>04</i> 2006</a><a href="#" class="date open" data-view="cygnus">Mar <i>15</i> 2004</a><a href="#" class="date open" data-view="discovery">Jun <i>01</i> 2002</a><a href="#" class="date open" data-view="umd">Sep <i>15</i> 1999</a>		</nav>
 		<nav id="ticker">
 			<a href="#" id="ticker-moment"></a>
 		</nav>
