hopefully updated image?

--- a/BOTTLE$/copenhagen.html
+++ b/BOTTLE$/copenhagen.html
@@ -458,7 +458,7 @@
 	<!-- about -->
 	<section id="about-pane">
 		<div class="inner">
-			<img src="/theme/img/img-about.png" alt="Martin Ringlien" />
+			<img src="img/map.png" alt="Martin Ringlien" />
 			<div class="left">
 				
 			<p><strong>I am Martin Ringlein</strong>Design Manager at Twitter; with a primary focus on designing the design team. I am a veteran creative director and passionate entrepreneur, holding extensive experience building and managing creative teams within start-ups, in-house and agency cultures.</p>
