--- a/BOTTLE$/copenhagen.html
+++ b/BOTTLE$/copenhagen.html
@@ -9,7 +9,7 @@
 -->
 <head>
 	<meta charset="utf-8" />
-	<title>Marty: Hello. I'm @smarty</title>
+	<title>BOTTLE$: Collectors in Copenhagen</title>
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/screen.css" />
 	<link rel="stylesheet" href="css/responsive.css" />
