adding Paris map

--- a/BOTTLE$/copenhagen.html
+++ b/BOTTLE$/copenhagen.html
@@ -20,8 +20,8 @@
 	<section id="slides">
 		
 					<div class="slide" data-view="BOTTLE$/copenhagen/intro" data-order="1">
-						<h2>In The Beginning<h2>
-						<p><img src="img/logo-intro.png" alt="In The Beginning"/> I originally came to Copenhagen with the idea of investigating sustainability in Copenhagen through waste. After a few days, my questions began to change... <a href="#" class="slide-trigger open"><i></i> <b>MORE</b></a> <a href="#" class="slide-trigger close"><i></i> <b>LESS</b></a></p>
+						<h2>Sustainability &amp; Waste in Copenhagen<h2>
+						<p><img src="img/logo-intro.png" alt="In The Beginning"/> I originally came to Copenhagen with the idea of investigating sustainability in Copenhagen through waste. Throughout my investigation of waste, I stumbled on <a href="#" class="slide-trigger open"><i></i> <b>MORE</b></a> <a href="#" class="slide-trigger close"><i></i> <b>LESS</b></a></p>
 					</div>
 				
 					<div class="slide" data-view="method1" data-order="2">
@@ -458,8 +458,8 @@
 	<!-- about -->
 	<section id="about-pane">
 		<div class="inner">
-			<img src="img/map.png" alt="Marie Map" />
-			<div class="left">
+<!-- 			<img src="img/icon-close.png" alt="Marie Map" />
+ -->			<div class="left">
 				
 			<p><strong>I am Marie Ringlein</strong>Design Manager at method2; with a primary focus on designing the design team. I am a veteran creative director and passionate entrepreneur, holding extensive experience building and managing creative teams within start-ups, in-house and agency cultures.</p>
 					</div>
