updated some stuff

--- a/UrbanAdventures/Paris.html
+++ b/UrbanAdventures/Paris.html
@@ -5,9 +5,12 @@
   </head>
   <body>
     <div id="map"></div>
+    <script type="text/javascript" src="ImageData.json"></script>
+    <script src="Scripts/imageinfo-lib.js"></script>
+    <script src="https://rawgit.com/exif-js/exif-js/master/exif.js"></script>
     <script src="MapApi.js"></script>
     <script async defer
-    	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCi8TkfVIn_NFHQLdcWP_lpaA8kKCr-HI0&callback=initMap">
-	</script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCi8TkfVIn_NFHQLdcWP_lpaA8kKCr-HI0&callback=initMap">
+    </script>
   </body>
 </html>
